refactored User model to include bcrpyt optimized code along with sign in and authentication from controller. corrected current_user method to collect only if there is a session active and it is not already assigned, refactored index view to make it more readable.

--- a/source/authenication/public/css/application.css
+++ b/source/authenication/public/css/application.css
@@ -17,12 +17,13 @@ nav {
 }
 
 nav .brand, nav .brand a {
+  margin-top: 5px;
   margin-left: 25px;
   font-size: 18pt;
   text-decoration: none;
   color: #444;
   width: 60%;
-  display: inline-block;
+  float: left;
 }
 
 nav ul {
